--- a/src/components/Tables/Table.css
+++ b/src/components/Tables/Table.css
@@ -1,18 +1,22 @@
 
   table {
     margin: 10px auto;
+    border-collapse: collapse;
   }
   
   thead th {
     font-weight: bold;
     background: #8a97a0;
     color: #FFF;
+    text-align: center;
   }
   
   tr {
     background: #f4f7f8;
-    border-bottom: 1px solid #FFF;
-    margin-bottom: 5px;
+    border-bottom: 1px solid rgb(220, 198, 198);
+    margin-bottom: 1px;
+    border: solid;
+    border-width: 1px 0;
   }
   
   tr:nth-child(even) {
