added the chart and everything works fine

--- a/src/components/Tables/Table.css
+++ b/src/components/Tables/Table.css
@@ -1,7 +1,11 @@
 
   table {
-    margin: 10px auto;
+    margin: 16px auto;
     border-collapse: collapse;
+    display: block;
+    height: 400px;
+    overflow-y: scroll;
+    float: right;
   }
   
   thead th {
